# clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  dev-rust.ps1
src/: hotkeys.rs  main.rs  sensitive.rs  tray.rs  windows_utils.rs
src/clipboard/: watcher.rs
src/server/: handlers.rs  server.rs
src/store/: clips.rs  db.rs  mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: App.module.css  App.tsx  declarations.d.ts  global.css  index.css  main.tsx  types.ts
web/src/components/: AlertModal.module.css  AlertModal.tsx  Button.module.css  Button.tsx  ClipList.module.css  ClipList.tsx  ManualClipForm.module.css  ManualClipForm.tsx  RecordingToggle.module.css  RecordingToggle.tsx  SearchBar.module.css  SearchBar.tsx  SortBar.module.css  SortBar.tsx
web/src/utils/: date.ts  tagIcons.ts
