[package]
name = "clipboard"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "clipboard"
path = "src/main.rs"

[profile.release]
opt-level = "z"
strip = true

[build-dependencies]
winres = "0.1"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
rust-embed = { version = "8", features = ["debug-embed"] }
tray-icon = "0.12"
tao = "0.28"
arboard = "3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "0.8"
image = "0.24"
mime_guess = "2"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }